[gd_scene load_steps=3 format=3 uid="uid://nvem4airnve7"]

[ext_resource type="Script" uid="uid://0lfvcrb2oaep" path="res://ChatManager.gd" id="1_mgfuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgfuv"]
bg_color = Color(0.5529412, 0, 0, 0.85490197)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ChatManager" type="Node2D"]
script = ExtResource("1_mgfuv")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ChatPanel" type="Panel" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mgfuv")

[node name="UserInput" type="LineEdit" parent="ChatPanel"]
layout_mode = 0
offset_right = 68.5625
offset_bottom = 31.0

[node name="SendButton" type="Button" parent="ChatPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="ChatLog" type="RichTextLabel" parent="ChatPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
